Deprecate JpaEntityGraph.isAdHocEntityGraph method.
An EntityGraph without attributes is valid. Therefore it is not possible to determine if a given JpaEntityGraph is a dynamic one just by looking at the attributes alone.